fix text overlap in background

--- a/src/app/background/home-page/home-page.component.less
+++ b/src/app/background/home-page/home-page.component.less
@@ -9,12 +9,15 @@
 nz-list-item-meta {
   position: absolute;
   right: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+  max-width: 60%;
+  text-align: end;
 }
 
 nz-list-item.ant-list-item {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  padding-right: 40%;
 }
 
 a {
